fix: footer overlap

--- a/src/index.css
+++ b/src/index.css
@@ -93,11 +93,11 @@ a {
 }
 
 .custom-bg {
-  position: absolute;
   width: 100%;
   height: 10rem;
   bottom: 50px;
   right: 0;
   background: url(/bg.png) no-repeat bottom right;
   background-size: contain;
+  margin-bottom: 0.875rem;
 }
